# python_clean_arch

./: .gitignore  LICENSE  README.md  pyproject.toml
cli/: http_server_cli.py  test.py
python_clean_arch/adapter/graphql/: context.py  router.py
python_clean_arch/adapter/graphql/definitions/: user.py
python_clean_arch/adapter/graphql/schema/: __init__.py  mutation.py  query.py
python_clean_arch/adapter/repositories/: user_repository.py
python_clean_arch/adapter/rest/v1/: routes.py
python_clean_arch/adapter/rest/v1/endpoints/: user.py
python_clean_arch/adapter/schemas/: shared.py  user_schema.py
python_clean_arch/domain/: error.py
python_clean_arch/domain/dtos/: base_dto.py  user_dto.py
python_clean_arch/domain/repositories/: base_repository.py
python_clean_arch/domain/usecases/: base_usecase.py
python_clean_arch/infra/: config.py  database.py
python_clean_arch/registry/: config.py  container.py  fastapi_creator.py
python_clean_arch/usecases/: user_usecase.py
python_clean_arch/utils/: class_object.py  common_utils.py  dto.py  query_builder.py
